# serial_escpos

./: Cargo.toml  README.md
src/: duplex.rs  main.rs  printer_setting.txt
