[package]
name = "serial_escpos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
serde = "1.0.160"
serialport = "4.2.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.7", features = ["codec"] }
